--- a/.github/workflows/mail-on-push.yml
+++ b/.github/workflows/mail-on-push.yml
@@ -12,7 +12,7 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrest.MAIL_PASSWORD}}
-          subject: "GG"
-          body: "TEREERERERE"
-          to: "artjomvolk123@gmail.com"
-          from: "Github actions"
+          subject: GG
+          body: TEREERERERE
+          to: artjomvolk123@gmail.com
+          from: Github actions
