--- a/.github/workflows/mail-on-push.yml
+++ b/.github/workflows/mail-on-push.yml
@@ -12,7 +12,7 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrest.MAIL_PASSWORD}}
-          subject: GG
+          subject: ${{github.repostory}}
           body: Build job of ${{github.repository}} completed successfully!
           to: artjomvolk123@gmail.com
           from: Github actions
