--- a/.github/workflows/mail-on-push.yml
+++ b/.github/workflows/mail-on-push.yml
@@ -1,18 +1,16 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Send mail
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: stmp.gmail.com
-          server_port: 465
-          username: ${{secrets.MAIL_USERNAME}}
-          password: ${{secrest.MAIL_PASSWORD}}
-          subject: GG
-          body: Build job of ${{github.repository}} completed successfully!
-          to: artjomvolk123@gmail.com
-          from: Github actions
+   mail-on-push:
+     runs-on: ubuntu-latest
+     steps:
+     - name: Send email
+       uses: dawidd6/action-send-mail@v3
+       with:
+         server_address: smtp.gmail.com
+         server_port: 465
+         username: ${{secrets.MAIL_USERNAME}}
+         password: ${{secrets.MAIL_PASSWORD}}
+         subject: ase
+         body: ase
+         to: ang.tulusa@gmail.com
+         from: Github actions
